--- a/home.css
+++ b/home.css
@@ -5,10 +5,17 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 .info {
-    color: blue;
-    padding: 50px;
+    font-size: 2rem;
     width: 100%;
     text-align: center;
+}
+span {
+    font-size: 1.5rem;
+    margin: 5px;
+    color: white;
+    background-color: black;
+    padding: 5px 10px;
+    border-radius: 10px;
 }
 .team-container {
     margin: 30px;
@@ -27,9 +34,9 @@ button {
 }
 .result {
     align-self: center; 
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 .random-throw {
-    margin-top: 50px;
-    height: 100px;
+    margin: 20px;
+    height: 50px;
 }
